<resources>
    <string name="app_name">NomNoms</string>
    <string name="menu_nom_newnom">New..</string>
    <string name="menu_nom_eventlog">Event Log</string>
    <string name="edit">Edit</string>
    <string name="title_subtitle">Subtitle</string>
    <string name="title_description">Description</string>
    <string name="contentdescription_image">image</string>
    <string name="menu_nom_sort_alphabetical">Sort [Alphabetical]</string>
    <string name="menu_nom_sort_ascending">Sort [Asc]</string>
    <string name="menu_nom_sort_descending">Sort [Desc]</string>
    <string name="title_name_of_noms">Name of Noms</string>
    <string name="abort">Abort</string>
    <string name="add">+</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="content_description_image">imageContent</string>
    <string name="add_noms">Add</string>
</resources>
