<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:text="@string/title_name_of_noms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:ems="10"
            android:id="@+id/textview_name"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
    <TextView
            android:text="@string/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_subtitle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:ems="10"
            android:id="@+id/textview_subtitle_nom"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_subtitle"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_subtitle_nom"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:ems="10"
            android:id="@+id/textview_description_noms"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
</merge>